adding the circular motion class to the project

--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Circular_Motion.h" />
     <ClInclude Include="Drag.h" />
     <ClInclude Include="Elasticity.h" />
     <ClInclude Include="Friction.h" />
