--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Elasticity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Circular_Motion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="driver.cpp">
