--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -27,6 +27,8 @@
     <ClInclude Include="Momentum.h" />
     <ClInclude Include="Physics.h" />
     <ClInclude Include="reactphysics3d\reactphysics3d.h" />
+    <ClInclude Include="Statics.h" />
+    <ClInclude Include="Torque.h" />
     <ClInclude Include="Vector2d.h" />
     <ClInclude Include="Vector3D.h" />
   </ItemGroup>
