--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="UniformCircularMotion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FluidStatics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="driver.cpp">
