adding a Temperature class, as well as changed the name of the  main driver class to PhysicsWorld, as it is the portal into all other classes via composition relationship

--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -20,14 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FluidStatics.h" />
+    <ClInclude Include="Temperature.h" />
     <ClInclude Include="UniformCircularMotion.h" />
     <ClInclude Include="Drag.h" />
     <ClInclude Include="Elasticity.h" />
     <ClInclude Include="Energy.h" />
     <ClInclude Include="Friction.h" />
     <ClInclude Include="Momentum.h" />
-    <ClInclude Include="Physics.h" />
-    <ClInclude Include="reactphysics3d\reactphysics3d.h" />
+    <ClInclude Include="PhysicsWorld.h" />
     <ClInclude Include="RotationalMotion.h" />
     <ClInclude Include="Statics.h" />
     <ClInclude Include="Torque.h" />
