--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Physics.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Vector2d.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -39,9 +36,6 @@
     <ClInclude Include="Momentum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="reactphysics3d\reactphysics3d.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Statics.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -55,6 +49,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FluidStatics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsWorld.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Temperature.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
