--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Temperature.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Heat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="driver.cpp">
