--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="TemplateClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FluidDynamics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector2d.cpp">
