--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -20,8 +20,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynamicsAndForces.h" />
+    <ClInclude Include="ElectricCharge.h" />
+    <ClInclude Include="ElectricCurrent.h" />
+    <ClInclude Include="ElectricPotential.h" />
     <ClInclude Include="FluidDynamics.h" />
     <ClInclude Include="FluidStatics.h" />
+    <ClInclude Include="Hearing.h" />
     <ClInclude Include="Heat.h" />
     <ClInclude Include="PeriodicElements.h" />
     <ClInclude Include="Temperature.h" />
@@ -39,6 +43,7 @@
     <ClInclude Include="Torque.h" />
     <ClInclude Include="Vector2d.h" />
     <ClInclude Include="Vector3D.h" />
+    <ClInclude Include="Waves.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp" />
