--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -47,6 +47,7 @@
     <ClInclude Include="Waves.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ElectricCharge.cpp" />
     <ClCompile Include="testFactory.cpp" />
     <ClCompile Include="PhysicsWorld.cpp" />
     <ClCompile Include="Vector2d.cpp" />
