backing up a working version

--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -108,4 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
