adding the ElectromagneticInduction class, as well as updates to the magnetic class.

--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="ElectricCharge.h" />
     <ClInclude Include="ElectricCurrent.h" />
     <ClInclude Include="ElectricPotential.h" />
+    <ClInclude Include="ElectroMagneticInduction.h" />
     <ClInclude Include="FluidDynamics.h" />
     <ClInclude Include="FluidStatics.h" />
     <ClInclude Include="Hearing.h" />
