finished the ElectromagneticWaves class and now adding the GeometricOptics class.

--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -102,6 +102,12 @@
     <ClInclude Include="ElectroMagneticInduction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ElectromagneticWaves.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GeometricOptics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector2d.cpp">
