--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -25,8 +25,10 @@
     <ClInclude Include="ElectricCurrent.h" />
     <ClInclude Include="ElectricPotential.h" />
     <ClInclude Include="ElectroMagneticInduction.h" />
+    <ClInclude Include="ElectromagneticWaves.h" />
     <ClInclude Include="FluidDynamics.h" />
     <ClInclude Include="FluidStatics.h" />
+    <ClInclude Include="GeometricOptics.h" />
     <ClInclude Include="Hearing.h" />
     <ClInclude Include="Heat.h" />
     <ClInclude Include="Kinematics.h" />
