got the two Classes built and ready to go that coincide with the last chapters we will be doing in our physics class. Unfortunitly we will not be going over special relativity so I will have to do it on my own over the summer.

--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -49,6 +49,8 @@
     <ClInclude Include="Torque.h" />
     <ClInclude Include="Vector2d.h" />
     <ClInclude Include="Vector3D.h" />
+    <ClInclude Include="VisionOpticalInstruments.h" />
+    <ClInclude Include="WaveOptics.h" />
     <ClInclude Include="Waves.h" />
   </ItemGroup>
   <ItemGroup>
