added the framework for the SpecialRelativity class

--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="VisionOpticalInstruments.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SpecialRelativity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp">
