--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="SpecialRelativity.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="QuantumPhysics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp">
