Added my old triangle solving class but modified to get rid of all the old dependencies I had built into it with tryng to build and Exception Handler class which was a big mistake. All errors are handled right inside the triangle class itself now.

--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="RunTimer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TriangleSolver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp">
