--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -41,6 +41,7 @@
     <ClInclude Include="Temperature.h" />
     <ClInclude Include="TemplateClass.h" />
     <ClInclude Include="Thermodynamics.h" />
+    <ClInclude Include="TriangleSolver.h" />
     <ClInclude Include="UniformCircularMotion.h" />
     <ClInclude Include="Drag.h" />
     <ClInclude Include="Elasticity.h" />
