--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -33,6 +33,8 @@
     <ClInclude Include="Hearing.h" />
     <ClInclude Include="Heat.h" />
     <ClInclude Include="Kinematics.h" />
+    <ClInclude Include="LinearRegression.h" />
+    <ClInclude Include="LogisticRegression.h" />
     <ClInclude Include="Magnetism.h" />
     <ClInclude Include="PeriodicElements.h" />
     <ClInclude Include="Physics_World.h" />
@@ -61,9 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp" />
-    <ClCompile Include="VectorNd.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="linearRegression.txt" />
     <Text Include="oldProblems.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
