problems with the logistical regression model, seeking help from the tutorial maker on you tube before i continue.

--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="linearRegression.txt" />
+    <Text Include="LogisticalRegression.txt" />
     <Text Include="oldProblems.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
