Added a Matrix class that can put a matrix into rref

--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClInclude Include="LogisticRegression.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MatrixND.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp">
