--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="LinearRegression.h" />
     <ClInclude Include="LogisticRegression.h" />
     <ClInclude Include="Magnetism.h" />
+    <ClInclude Include="MatrixND.h" />
     <ClInclude Include="PeriodicElements.h" />
     <ClInclude Include="Physics_World.h" />
     <ClInclude Include="QuantumPhysics.h" />
