Oh man I almost broke it all again, this is quite a balancing act. Its pretty much my playground where when I read about something new or want to try to implement something I just add it to this project. not sure that is a good idea anymore

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/My Advisor Results - Physics_Formula_Class
+/My Inspector Results - Physics_Formula_Class/r007mi3
