Adding a AtomicPhysics class

--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AtomicPhysics.h" />
     <ClInclude Include="Circuits.h" />
     <ClInclude Include="DynamicsAndForces.h" />
     <ClInclude Include="ElectricCharge.h" />
