--- a/Physics_Formula_Class.vcxproj.filters
+++ b/Physics_Formula_Class.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="RegexHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AtomicPhysics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="testFactory.cpp">
