Added a testing header file for messing around with the examples from modern c++ cookbook

--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -48,6 +48,7 @@
     <ClInclude Include="StringHelper.h" />
     <ClInclude Include="Temperature.h" />
     <ClInclude Include="TemplateClass.h" />
+    <ClInclude Include="Testing.h" />
     <ClInclude Include="Thermodynamics.h" />
     <ClInclude Include="TriangleSolver.h" />
     <ClInclude Include="UniformCircularMotion.h" />
