Finished the periodic elements class as well as addd a print method to print them

--- a/Physics_Formula_Class.vcxproj
+++ b/Physics_Formula_Class.vcxproj
@@ -68,6 +68,7 @@
     <ClInclude Include="Waves.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="PeriodicElements.cpp" />
     <ClCompile Include="RandomNumbers.cpp" />
     <ClCompile Include="testFactory.cpp" />
   </ItemGroup>
